fixing layout issues

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,6 +5,8 @@
 body {
     background-color: black;
     color: white;
+    margin-left: 25px;
+    margin-right: 25px;
 }
 
 .header {
